--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-ultralytics
 streamlit
-plotly
+ultralytics
+torch
+torchvision
+opencv-python-headless
 pillow
 numpy
 pandas
-torch
-torchvision
+plotly
